--- a/index.html
+++ b/index.html
@@ -99,11 +99,6 @@ body{font-family:Arial,sans-serif;background:#667eea;min-height:100vh;padding:10
 <input type="number" class="input" id="ic" placeholder="例: 500">
 </div>
 <div class="group">
-<label class="label">検査時間（分）- 自動計算</label>
-<input type="text" class="input" id="it" disabled>
-<div class="time-info" id="ti"></div>
-</div>
-<div class="group">
 <label class="label">ロットNo</label>
 <input type="text" class="input" id="ln" placeholder="例: LOT-001">
 </div>
@@ -192,13 +187,10 @@ const[sh,sm]=s.split(':').map(Number),[eh,em]=e.split(':').map(Number);
 let sm2=sh*60+sm,em2=eh*60+em;
 if(em2<sm2)em2+=1440;
 const d=em2-sm2;
-document.getElementById('it').value=d;
 const h=Math.floor(d/60),m=d%60;
-document.getElementById('ti').textContent=h>0?`(${h}時間${m}分)`:`(${m}分)`;
-}else{
-document.getElementById('it').value='';
-document.getElementById('ti').textContent='';
+return d;
 }
+return '';
 }
 function changeCnt(id,c){
 const i=document.getElementById(id);
@@ -266,7 +258,6 @@ const d=data[i];
 document.getElementById('pd').value=d.pd.replace(/\//g,'-');
 document.getElementById('on').value=d.on;
 document.getElementById('ic').value=d.ic;
-document.getElementById('it').value=d.it;
 document.getElementById('ln').value=d.ln||'';
 document.getElementById('st').value=d.st||'';
 document.getElementById('et').value=d.et||'';
@@ -289,7 +280,8 @@ items.forEach((it,i)=>{
 const v=document.getElementById(`ng_${i}`)?.value;
 if(v&&v!=='0')m.set(it.code,v);
 });
-data.push({pd:document.getElementById('pd').value.replace(/-/g,'/'),on:o,ic:document.getElementById('ic').value||'0',it:document.getElementById('it').value||'0',ln:document.getElementById('ln').value||'',st:document.getElementById('st').value||'',et:document.getElementById('et').value||'',it2:document.getElementById('it2').value||'',in:document.getElementById('in').value||'',ngMap:m,rm:document.getElementById('rm').value||''});
+const calculatedTime=calcTime();
+data.push({pd:document.getElementById('pd').value.replace(/-/g,'/'),on:o,ic:document.getElementById('ic').value||'0',it:calculatedTime||'0',ln:document.getElementById('ln').value||'',st:document.getElementById('st').value||'',et:document.getElementById('et').value||'',it2:document.getElementById('it2').value||'',in:document.getElementById('in').value||'',ngMap:m,rm:document.getElementById('rm').value||''});
 renderHeader();render();clear();status('新しい行を追加しました');updateCnt();
 }
 function update(){
@@ -301,7 +293,8 @@ items.forEach((it,i)=>{
 const v=document.getElementById(`ng_${i}`)?.value;
 if(v&&v!=='0')m.set(it.code,v);
 });
-data[sel]={pd:document.getElementById('pd').value.replace(/-/g,'/'),on:o,ic:document.getElementById('ic').value||'0',it:document.getElementById('it').value||'0',ln:document.getElementById('ln').value||'',st:document.getElementById('st').value||'',et:document.getElementById('et').value||'',it2:document.getElementById('it2').value||'',in:document.getElementById('in').value||'',ngMap:m,rm:document.getElementById('rm').value||''};
+const calculatedTime=calcTime();
+data[sel]={pd:document.getElementById('pd').value.replace(/-/g,'/'),on:o,ic:document.getElementById('ic').value||'0',it:calculatedTime||'0',ln:document.getElementById('ln').value||'',st:document.getElementById('st').value||'',et:document.getElementById('et').value||'',it2:document.getElementById('it2').value||'',in:document.getElementById('in').value||'',ngMap:m,rm:document.getElementById('rm').value||''};
 renderHeader();render();status('行を更新しました');
 }
 function del(){
@@ -314,14 +307,12 @@ function clear(){
 document.getElementById('pd').value=new Date().toISOString().split('T')[0];
 document.getElementById('on').value='';
 document.getElementById('ic').value='';
-document.getElementById('it').value='';
 document.getElementById('ln').value='';
 document.getElementById('st').value='';
 document.getElementById('et').value='';
 document.getElementById('it2').value='';
 document.getElementById('in').value='';
 document.getElementById('rm').value='';
-document.getElementById('ti').textContent='';
 updateNG();sel=-1;
 }
 function exp(){
