--- a/hst.html
+++ b/hst.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ヒストグラム生成ツール</title>
+    <title></title>ヒストグラム生成ツール</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-adapter-date-fns/2.0.0/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/1.4.0/chartjs-plugin-annotation.min.js"></script>
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📊ヒストグラム生成ツール</h1>
+        <h1>📊 ヒストグラム生成ツール</h1>
 
 ```
     <div class="section">
@@ -197,6 +197,11 @@
         <h3>📊 データを追加してください</h3>
         <p>Excelファイルまたは直接入力でデータを追加</p>
     </div>
+    
+    <footer style="text-align:center;margin-top:40px;padding:20px;border-top:1px solid #ddd;color:#666;font-size:12px;">
+        <p>📊 Excel ヒストグラム生成ツール</p>
+        <p style="margin-top:5px;">Developed by <strong>y.sugimoto</strong> | 2025</p>
+    </footer>
 </div>
 
 <script>
@@ -1013,6 +1018,13 @@
                 csvRows.push(['規格下限', specLimits.lower !== null ? specLimits.lower : 'なし']);
                 csvRows.push(['規格上限', specLimits.upper !== null ? specLimits.upper : 'なし']);
             }
+
+            // クレジット情報を追加
+            csvRows.push([]); // 空行
+            csvRows.push(['生成情報']);
+            csvRows.push(['ツール名', 'Excel ヒストグラム生成ツール']);
+            csvRows.push(['開発者', 'y.sugimoto']);
+            csvRows.push(['生成日時', new Date().toLocaleString('ja-JP')]);
 
             // CSVテキストを生成
             const csvContent = csvRows.map(row => 
