--- a/hst.html
+++ b/hst.html
@@ -6,44 +6,228 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ヒストグラム生成ツール</title>
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#fafbfd}
-.container{max-width:1200px;margin:0 auto;padding:20px}
-h1{text-align:center;color:#1e40af;margin-bottom:30px}
-.grid{display:grid;grid-template-columns:1fr 2fr;gap:20px}
-.panel{background:white;border-radius:12px;padding:20px;box-shadow:0 2px 8px rgba(59,130,246,0.08);border:1px solid #e0e7ff}
-.section{margin-bottom:20px}
-.section h2{font-size:18px;margin-bottom:15px;color:#3730a3}
-input[type="text"],input[type="number"],textarea{width:100%;padding:8px;border:1px solid #c7d2fe;border-radius:6px;box-sizing:border-box;background:#f9fafb}
-input[type="text"]:focus,input[type="number"]:focus,textarea:focus{outline:none;border-color:#60a5fa;background:white}
-textarea{resize:vertical;min-height:100px}
-button{width:100%;padding:10px;border:none;border-radius:6px;cursor:pointer;font-weight:bold;transition:all 0.3s}
-.btn-primary{background:#60a5fa;color:white}
-.btn-primary:hover{background:#3b82f6;transform:translateY(-1px)}
-.btn-success{background:#34d399;color:white}
-.btn-success:hover{background:#10b981;transform:translateY(-1px)}
-.btn-danger{background:#f87171;color:white}
-.btn-danger:hover{background:#ef4444;transform:translateY(-1px)}
-.btn-secondary{background:#93c5fd;color:white}
-.btn-secondary:hover{background:#60a5fa;transform:translateY(-1px)}
-.dataset-item{display:flex;align-items:center;gap:10px;padding:10px;background:#eff6ff;border-radius:6px;margin-bottom:8px;border:1px solid #dbeafe}
-.color-box{width:20px;height:20px;border-radius:4px}
-.dataset-name{flex:1;font-size:14px;color:#1e40af}
-.icon-btn{width:30px;height:30px;padding:0;display:inline-flex;align-items:center;justify-content:center;background:transparent;color:#60a5fa}
-.icon-btn:hover{background:#dbeafe;border-radius:4px}
-.checkbox-group{display:flex;flex-direction:column;gap:8px}
-.checkbox-label{display:flex;align-items:center;gap:8px;color:#3730a3}
-canvas{width:100%;height:auto;border:1px solid #c7d2fe;border-radius:8px}
-.stats{margin-top:20px;padding:15px;background:#eff6ff;border-radius:8px;border:1px solid #dbeafe}
-.stat-item{margin-bottom:8px;padding:10px;background:white;border-radius:6px;border:1px solid #e0e7ff}
-.threshold-group{display:flex;gap:10px}
-.threshold-group input{flex:1}
-.toggle-btn{width:auto;padding:8px 16px}
-.toggle-btn.active{background:#f87171}
-.mb-2{margin-bottom:8px}
-.mb-4{margin-bottom:16px}
-.text-sm{font-size:14px;color:#4c1d95}
-.text-xs{font-size:12px;color:#6366f1}
-@media(max-width:768px){.grid{grid-template-columns:1fr}}
+:root {
+  --primary: #2563eb;
+  --accent: #10b981;
+  --danger: #ef4444;
+  --background: #f4f6fb;
+  --panel: #fff;
+  --border: #e0e7ff;
+  --text: #1e293b;
+  --muted: #64748b;
+}
+
+body {
+  background: var(--background);
+  color: var(--text);
+  font-family: 'Inter', 'Arial', sans-serif;
+  margin: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 32px 16px;
+}
+
+h1 {
+  text-align: center;
+  color: var(--primary);
+  margin-bottom: 32px;
+  letter-spacing: 1px;
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.panel {
+  background: var(--panel);
+  border-radius: 12px;
+  box-shadow: 0 2px 12px rgba(37,99,235,0.07);
+  border: 1px solid var(--border);
+  padding: 24px;
+  margin-bottom: 24px;
+}
+
+.section h2 {
+  font-size: 1.3rem;
+  color: var(--primary);
+  margin-bottom: 12px;
+  font-weight: 600;
+}
+
+input[type="text"], input[type="number"], textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  background: #f8fafc;
+  font-size: 1rem;
+  margin-bottom: 12px;
+  transition: border 0.2s, box-shadow 0.2s;
+}
+
+input[type="text"]:focus, input[type="number"]:focus, textarea:focus {
+  outline: none;
+  border-color: var(--primary);
+  box-shadow: 0 0 0 2px #2563eb33;
+  background: #fff;
+}
+
+textarea {
+  resize: vertical;
+  min-height: 110px;
+}
+
+button {
+  padding: 12px 20px;
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: 600;
+  background: var(--primary);
+  color: #fff;
+  border: none;
+  box-shadow: 0 2px 6px rgba(37,99,235,0.08);
+  transition: background 0.2s, transform 0.1s;
+  cursor: pointer;
+  margin-bottom: 8px;
+}
+
+button:hover {
+  background: #1d4ed8;
+  transform: translateY(-2px) scale(1.03);
+}
+
+button:active {
+  background: #1e40af;
+  transform: translateY(1px) scale(0.97);
+}
+
+.btn-success {
+  background: var(--accent);
+}
+.btn-success:hover {
+  background: #059669;
+}
+.btn-danger {
+  background: var(--danger);
+}
+.btn-danger:hover {
+  background: #dc2626;
+}
+.btn-secondary {
+  background: var(--muted);
+}
+.btn-secondary:hover {
+  background: var(--primary);
+}
+
+.dataset-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 12px;
+  background: #f1f5fe;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #e0e7ff;
+}
+
+.color-box {
+  width: 22px;
+  height: 22px;
+  border-radius: 6px;
+  border: 1.5px solid #e0e7ff;
+}
+
+.dataset-name {
+  flex: 1;
+  font-size: 15px;
+  color: var(--primary);
+  font-weight: 500;
+}
+
+.icon-btn {
+  width: 34px;
+  height: 34px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  color: var(--primary);
+  border-radius: 7px;
+  font-size: 1.2rem;
+  transition: background 0.18s;
+  border: none;
+}
+
+.icon-btn:hover {
+  background: #e0e7ff;
+}
+
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--primary);
+  font-size: 1rem;
+}
+
+canvas {
+  width: 100%;
+  height: auto;
+  border: 1px solid var(--border);
+  border-radius: 10px;
+  background: #fff;
+}
+
+.stats {
+  margin-top: 24px;
+  padding: 18px;
+  background: #f1f5fe;
+  border-radius: 10px;
+  border: 1px solid #e0e7ff;
+}
+
+.stat-item {
+  margin-bottom: 10px;
+  padding: 12px;
+  background: var(--panel);
+  border-radius: 8px;
+  border: 1px solid #e0e7ff;
+  font-size: 0.98rem;
+}
+
+.threshold-group {
+  display: flex;
+  gap: 12px;
+}
+
+.threshold-group input {
+  flex: 1;
+}
+
+.toggle-btn {
+  width: auto;
+  padding: 10px 18px;
+  font-size: 1rem;
+}
+
+.toggle-btn.active {
+  background: var(--danger);
+}
+
+@media (max-width: 768px) {
+  .grid { grid-template-columns: 1fr; }
+  .container { padding: 16px 4px; }
+  .panel { padding: 14px; }
+}
+
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
