--- a/hst.html
+++ b/hst.html
@@ -727,6 +727,56 @@ function exportImage() {
   link.href = canvas.toDataURL();
   link.click();
 }
+
+// 閾値追加関数
+function addThreshold() {
+  const input = document.getElementById('thresholdInput');
+  const value = parseFloat(input.value);
+  
+  if (isNaN(value)) return;
+  
+  thresholds.push({
+    id: Date.now(),
+    value: value,
+    color: `hsl(${Math.random() * 360}, 70%, 50%)`,
+    visible: true
+  });
+  
+  input.value = '';
+  updateThresholdList();
+  draw();
+}
+
+// 閾値の表示/非表示切り替え
+function toggleThresholdVisibility(id) {
+  const threshold = thresholds.find(t => t.id === id);
+  if (threshold) {
+    threshold.visible = !threshold.visible;
+    updateThresholdList();
+    draw();
+  }
+}
+
+// 閾値削除
+function removeThreshold(id) {
+  thresholds = thresholds.filter(t => t.id !== id);
+  updateThresholdList();
+  draw();
+}
+
+// 閾値リスト更新
+function updateThresholdList() {
+  const list = document.getElementById('thresholdList');
+  list.innerHTML = thresholds.map(t => `
+    <div class="dataset-item" style="margin-top:8px">
+      <div class="color-box" style="background:${t.color}"></div>
+      <span class="dataset-name">${t.value}</span>
+      <button class="icon-btn" onclick="toggleThresholdVisibility(${t.id})">${t.visible ? '👁️' : '🚫'}</button>
+      <button class="icon-btn" onclick="removeThreshold(${t.id})">🗑️</button>
+    </div>
+  `).join('');
+}
+
 </script>
 
 </body>
