--- a/hst.html
+++ b/hst.html
@@ -18,7 +18,16 @@
   --text: #1e293b;
   --muted: #64748b;
 }
-
+.threshold-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 8px;
+  background: #f1f5fe;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  border: 1px solid #e0e7ff;
+}
 body {
   background: var(--background);
   color: var(--text);
