--- a/hst.html
+++ b/hst.html
@@ -508,9 +508,8 @@ function draw() {
     maxCount = Math.max(maxCount, max);
     return { ...d, bins };
   });
-  
-  const margin = { top: 40, right: 40, bottom: 60, left: 60 };
-  const cw = w - margin.left - margin.right;
+const margin = { top: 40, right: 120, bottom: 60, left: 60 };
+const cw = canvas.width - margin.left - margin.right;
   const ch = h - margin.top - margin.bottom;
   
   if (!allBins.length) return;
