--- a/hst.html
+++ b/hst.html
@@ -18,6 +18,15 @@
   --text: #1e293b;
   --muted: #64748b;
 }
+footer {
+  margin-top: 40px;
+  padding: 20px 0;
+  text-align: center;
+  color: var(--muted);
+  font-size: 14px;
+  background: transparent;
+}
+  
 .threshold-item {
   display: flex;
   align-items: center;
