--- a/hst.html
+++ b/hst.html
@@ -795,8 +795,7 @@ function updateThresholdList() {
 }
 
 </script>
-<footer> style="margin-top:40px;padding:20px 0;text-align:center;color:#64748b;font-size:14px;background:transparent;"
-   2025 ysugimoto| ヒストグラム生成ツール
+<footer> 2025 ysugimoto| ヒストグラム生成ツール
 </footer>
 </body>
 </html>
