--- a/hst.html
+++ b/hst.html
@@ -282,7 +282,7 @@ canvas {
 <div class="text-xs">任意の正の数値を入力（例: 0.1, 1, 10）</div>
 </div>
 <div class="mb-4">
-<label class="text-sm">シグマライン</label>
+<label class="text-sm">σライン</label>
 <div class="checkbox-group">
 <label class="checkbox-label">
 <input type="checkbox" id="sigma1" onchange="draw()"> 1σライン
