--- a/hst.html
+++ b/hst.html
@@ -352,12 +352,16 @@ function formatNum(n, bw) {
   return n.toFixed(4);
 }
 
+
 function calcStats(data) {
   const n = data.length;
+  if (n < 2) return { mean: round(data[0] || 0), stdDev: 0 };
   const mean = data.reduce((s, v) => s + v, 0) / n;
-  const variance = data.reduce((s, v) => s + Math.pow(v - mean, 2), 0) / n;
+  // n-1で割る（標本分散）
+  const variance = data.reduce((s, v) => s + Math.pow(v - mean, 2), 0) / (n - 1);
   return { mean: round(mean), stdDev: round(Math.sqrt(variance)) };
 }
+
 
 function generateHist(data, bw) {
   if (!data.length) return { bins: [], max: 0 };
