--- a/hst.html
+++ b/hst.html
@@ -317,6 +317,11 @@ canvas {
 <!-- ヒストグラム -->
 <div class="panel">
 <h2>ヒストグラム</h2>
+  <div style="margin-bottom:10px">
+  <label for="canvasHeight">縦サイズ(px): </label>
+  <input type="number" id="canvasHeight" value="500" min="100" max="2000" style="width:120px" onchange="updateCanvasHeight()">
+  <button class="btn-primary" onclick="updateCanvasHeight()">変更</button>
+</div>
 <canvas id="canvas" width="800" height="500"></canvas>
 <div id="stats" class="stats" style="display:none"></div>
 </div>
@@ -336,6 +341,15 @@ canvas {
 </div>
 
 <script>
+
+  function updateCanvasHeight() {
+  const h = parseInt(document.getElementById('canvasHeight').value, 10);
+  const canvas = document.getElementById('canvas');
+  if (!isNaN(h) && h >= 100 && h <= 2000) {
+    canvas.height = h;
+    draw();
+  }
+}
 let datasets = [];
 let thresholds = [];
 
