--- a/hst.html
+++ b/hst.html
@@ -293,6 +293,9 @@ canvas {
 <label class="checkbox-label">
 <input type="checkbox" id="sigma3" onchange="draw()"> 3σライン
 </label>
+      <label class="checkbox-label">
+      <input type="checkbox" id="sigma4" onchange="draw()"> 4σライン
+    </label>
 </div>
 </div>
 <div class="mb-4">
