--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -101,8 +101,8 @@
     #daily-view .container{max-width:1400px;margin:0 auto;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.1);overflow:hidden}
     #daily-view .header{background:linear-gradient(135deg,#2c3e50,#3498db);color:#fff;padding:20px;text-align:center}
     #daily-view .main{display:grid;grid-template-columns:1fr 400px;min-height:500px}
-    #daily-view .table-section{padding:20px;background:#f8f9fa;overflow-x:auto}
-    #daily-view .input-panel{background:#fff;border-left:2px solid #e9ecef;padding:20px;overflow-y:auto;max-height:calc(100vh - 150px)}
+    #daily-view .table-section{padding:20px;background:#f8f9fa;overflow-x:auto;order:1}
+    #daily-view .input-panel{background:#fff;border-left:2px solid #e9ecef;padding:20px;overflow-y:auto;max-height:calc(100vh - 150px);order:2}
     #daily-view .data-table{width:100%;border-collapse:collapse;background:#fff;border-radius:8px;overflow:hidden;box-shadow:0 4px 15px rgba(0,0,0,.08)}
     #daily-view .data-table th{background:linear-gradient(135deg,#4a90e2,#357abd);color:#fff;padding:12px 8px;text-align:center;font-weight:600;font-size:12px;white-space:nowrap}
     #daily-view .data-table th.ng{background:linear-gradient(135deg,#f39c12,#e67e22);font-size:11px}
@@ -154,7 +154,7 @@
     #daily-view .add-time-period:hover{background:#dee2e6}
     #daily-view .time-summary{background:#e8f5e8;border:1px solid #4caf50;border-radius:4px;padding:6px;margin-top:8px;font-size:11px;color:#2e7d32;text-align:center}
     #daily-view .break-time-info{background:#fff3cd;border:1px solid #ffeaa7;color:#856404;padding:8px;border-radius:4px;margin-top:8px;font-size:11px;text-align:center}
-    @media(max-width:768px){#daily-view .main{grid-template-columns:1fr}#daily-view .input-panel{border-left:none;border-top:2px solid #e9ecef}}
+    @media(max-width:768px){#daily-view .main{grid-template-columns:1fr}#daily-view .input-panel{border-left:none;border-bottom:2px solid #e9ecef;order:1;max-height:none;padding:24px}#daily-view .table-section{order:2;padding:16px}}
     </style>
     
     <div class="container">
@@ -283,7 +283,7 @@
       </div>
 
       <div class="qr-resultArea">
-        <div id="qr-ok" class="qr-resultMark qr-ok">○</div>
+        <div id="qr-ok" class="qr-resultMark qr-ok">◯</div>
         <div id="qr-ng" class="qr-resultMark qr-ng">×</div>
         <div id="qr-lockMsg" class="qr-lock">NG! 管理者QRを読み込むまでロック中</div>
       </div>
@@ -739,7 +739,7 @@ function showInspectorMasterAlert(type, message) {
   setTimeout(() => container.innerHTML = '', 3000);
 }
 
-// 以下、日報機能（既存コードの続き）
+// 以下、日報機能(既存コードの続き)
 function calcTotalPieces(){
   const pieces = parseInt(document.getElementById('pieces').value) || 0;
   const boxes = parseInt(document.getElementById('boxes').value) || 0;
@@ -1454,7 +1454,7 @@ function expBoth(){
 
 document.addEventListener('DOMContentLoaded', init);
 
-// QR機能（省略 - 既存コードと同じ）
+// QR機能(省略 - 既存コードと同じ)
 (function(){
   const CUT_START = 3, CUT_LENGTH = 5, ADMIN_QR = "ADMIN123";
   let baseQR = null, isLocked = false, buffer = "", lastScanIndex = -1;
