--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>統合アプリ(日報×QR×マスタ管理) - Firebase版</title>
+<title>検査日報システム</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
   :root{ --border:#e5e7eb; --muted:#6b7280; --ink:#111827; --brand:#2563eb; --ok:#1a7f37; --ng:#d1242f; }
@@ -160,7 +160,7 @@
     <div class="container">
       <div class="header">
         <h1>📊 検査データ入力システム</h1>
-        <p>休憩時間除外対応版 + Firebase同期 + マスタ管理</p>
+
       </div>
       <div class="main">
         <div class="table-section">
