--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -80,7 +80,7 @@
 <header>
   <div class="wrap">
     <div class="bar">
-      <h1>統合アプリ(日報×QR×マスタ管理) - Firebase版</h1>
+      <h1>統合アプリ(日報×QR×マスタ管理)</h1>
       <div style="display:flex; align-items:center; gap:10px; flex-wrap:wrap;">
         <span id="firebase-status" class="firebase-status">接続中...</span>
         <div class="tabs" role="tablist">
