--- a/nippoview.html
+++ b/nippoview.html
@@ -827,8 +827,11 @@ function renderProductDefects() {
         const defectName = cols.get(code) || code;
         const itemRate = data.inspection > 0 ? (count / data.inspection * 100).toFixed(2) : 0;
         
+        // 新規NG項目かチェック
+        const isUnusual = unusualDefects.some(u => u.startsWith(code + ':'));
+        
         html += '<div class="defect-item">';
-        html += `<div class="defect-name">${code}: ${defectName}</div>`;
+        html += `<div class="defect-name">${code}: ${defectName}${isUnusual ? ' ⚡' : ''}</div>`;
         html += '<div>';
         html += `<span class="defect-count">${count}</span>`;
         html += `<span style="font-size:11px;color:#6b7280;margin-left:4px;">(${itemRate}%)</span>`;
