--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -379,6 +379,24 @@
           <div style="padding:24px;text-align:center;color:#6c757d;">検査員が登録されていません</div>
         </div>
       </div>
+
+      <div class="settings-card">
+        <h2>🔍 検査種類マスタ管理</h2>
+        <div id="inspectionTypeAlertContainer"></div>
+        
+        <div class="form-group">
+          <label class="form-label">検査種類コード</label>
+          <div style="display:flex;gap:10px;flex-wrap:wrap">
+            <input type="text" class="form-input" id="inspectionTypeCode" placeholder="例: A" style="flex:1;min-width:200px;text-transform:uppercase" oninput="this.value=this.value.toUpperCase()">
+            <button class="btn btn-success" onclick="addInspectionType()" style="min-width:100px">➕ 追加</button>
+          </div>
+        </div>
+        
+        <h3 style="margin-top:24px;margin-bottom:12px;color:#2c3e50;font-size:17px;">登録済み検査種類</h3>
+        <div class="item-list" id="inspectionTypeList">
+          <div style="padding:24px;text-align:center;color:#6c757d;">検査種類が登録されていません</div>
+        </div>
+      </div>
     </div>
   </section>
 </main>
@@ -402,6 +420,7 @@ let db;
 let unsubscribeDaily = null;
 let unsubscribeProducts = null;
 let unsubscribeInspectors = null;
+let unsubscribeInspectionTypes = null;
 
 try {
   firebase.initializeApp(firebaseConfig);
@@ -604,6 +623,7 @@ let currentDailyLang = 'ja';
 let sel = -1, data = [], items = [], cols = new Map(), inspectorCount = 0, timePeriodCount = 0;
 let master = {};
 let inspectorNames = [];
+let inspectionTypes = [];
 let editingProductCode = null;
 
 const breakTimes = [
