--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -206,14 +206,14 @@
             <label class="label" id="lbl-it2">検査種類</label>
             <select class="select" id="it2">
               <option value="" id="opt-select2">選択してください</option>
-              <option value="A">A</option>
-              <option value="B">B</option>
-              <option value="C">C</option>
-              <option value="D">D</option>
-              <option value="E">E</option>
-              <option value="F">F</option>
-              <option value="G">G</option>
-              <option value="H">H</option>
+              <option value="F">F - 初期流動</option>
+              <option value="S">S - 選別</option>
+              <option value="K">K - 工程変更</option>
+              <option value="C">C - 新人Wチェック</option>
+              <option value="H">H - 箱詰め</option>
+              <option value="G">G - 外観検査</option>
+              <option value="R">R - 穴バリ検査</option>
+              <option value="Z">Z - 画像検査+梱包</option>
             </select>
           </div>
           <div class="group">
@@ -379,24 +379,6 @@
           <div style="padding:24px;text-align:center;color:#6c757d;">検査員が登録されていません</div>
         </div>
       </div>
-
-      <div class="settings-card">
-        <h2>🔍 検査種類マスタ管理</h2>
-        <div id="inspectionTypeAlertContainer"></div>
-        
-        <div class="form-group">
-          <label class="form-label">検査種類コード</label>
-          <div style="display:flex;gap:10px;flex-wrap:wrap">
-            <input type="text" class="form-input" id="inspectionTypeCode" placeholder="例: A" style="flex:1;min-width:200px;text-transform:uppercase" oninput="this.value=this.value.toUpperCase()">
-            <button class="btn btn-success" onclick="addInspectionType()" style="min-width:100px">➕ 追加</button>
-          </div>
-        </div>
-        
-        <h3 style="margin-top:24px;margin-bottom:12px;color:#2c3e50;font-size:17px;">登録済み検査種類</h3>
-        <div class="item-list" id="inspectionTypeList">
-          <div style="padding:24px;text-align:center;color:#6c757d;">検査種類が登録されていません</div>
-        </div>
-      </div>
     </div>
   </section>
 </main>
@@ -420,7 +402,6 @@ let db;
 let unsubscribeDaily = null;
 let unsubscribeProducts = null;
 let unsubscribeInspectors = null;
-let unsubscribeInspectionTypes = null;
 
 try {
   firebase.initializeApp(firebaseConfig);
@@ -623,7 +604,6 @@ let currentDailyLang = 'ja';
 let sel = -1, data = [], items = [], cols = new Map(), inspectorCount = 0, timePeriodCount = 0;
 let master = {};
 let inspectorNames = [];
-let inspectionTypes = [];
 let editingProductCode = null;
 
 const breakTimes = [
