--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -205,7 +205,7 @@
           <div class="group">
             <label class="label" id="lbl-it2">検査種類</label>
             <select class="select" id="it2">
-              <option value="" id="opt-select2">選択してください</option>
+              <option value="" id="opt-select2">通常検査</option>
               <option value="F">F - 初期流動</option>
               <option value="S">S - 選別</option>
               <option value="K">K - 工程変更</option>
